# R-loopGrammar

./: .gitignore  00_convert_coordinates.py  01_regions_extractor.py  02_regions_threshold.py  03_training_set.py  04_grammar_dict.py  05_union_dict.py  06_grammar_training.py  06_grammar_word.py  07_probabilistic_language.py  08_in_loop_probs.py  09_experimental_data.py  GRAMMAR.md  Makefile  README.md  aggregate_all_graph.py  coverage.py  grammar_dict.py  grammar_symbols.py  grammar_word.py  probability_analysis.py  probability_analysis_single.py  probability_analysis_single_truncated.py  pyproject.toml  regions_extractor.py  run_workflow.py  union_workflow.py  workflow_settings.ini
src/: run_workflow.py
src/analysis/: average.py  generate_latex_table.py  probability_analysis_single_truncated_other.py  repeats.py
src/model/: regions_threshold.py
src/rloopgrammar/: build_model.py  config_reader.py  graph_prediction.py  kfold_model.py  predict.py  union_models.py  union_workflow.py
src/rloopgrammar/analysis/: aggregate_all_graph.py  aggregate_runs.py  aggregated_graph.py  average_probability.py  avg_workflow.py  coverage.py  dictionary_comparison.py  generate_latex_table.py  probability_analysis_single_truncated.py  probability_analysis_single_truncated_other.py  probability_analysis_truncated_other.py  training_set_coverage.py  weight_comparison.py
src/rloopgrammar/model/: grammar_dict.py  grammar_training.py  grammar_word.py  in_loop_probs.py  probabilistic_language.py  training_set.py  union_dict.py
