[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rloopgrammar"
version = "0.0.1"
description = "R-loop grammar model."
authors = [{name = "Jacob Lusk", email = "jplusk@ucdavis.edu"}]
readme = "README.md"
keywords = ["rloop", "grammar"]
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.8"
dependencies = [
    "packaging",
    "openpyxl",
    "matplotlib",
]

[project.scripts]
rgrammar-run-workflow    = "rloopgrammar.run_workflow:main"
rgrammar-union-workflow  = "rloopgrammar.union_workflow:main"

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.urls]
Home = "https://github.com/Arsuaga-Vazquez-Lab/R-loopGrammar"


