[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rloopgrammar"
version = "0.0.1"
description = "R-loop grammar model."
authors = [
    {name = "Margherita Maria Ferrari"},
    {name = "Svetlana Poznanović"},
    {name = "Manda Riehl"},
    {name = "Jacob Lusk"},
    {name = "Stella Hartono"},
    {name = "Georgina Gonzalez-Isunza"},
    {name = "Frédéric Chédin"},
    {name = "Mariel Vázquez", email = "mrlvazquez@ucdavis.edu"},
    {name = "Nataša Jonoska, email = "jonoska@usf.edu"},
]

readme = "README.md"
keywords = ["rloop", "grammar"]
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.8"
dependencies = [
    "packaging",
    "openpyxl",
    "matplotlib",
    "gmpy2",
    "xlsxwriter"
]

[project.scripts]
rloop-grammar-build-model    = "rloopgrammar.build_model:main"
rloop-grammar-build-kfold-model = "rloopgrammar.kfold_model:main"
rloop-grammar-union-models   = "rloopgrammar.union_models:main"
rloop-grammar-predict        = "rloopgrammar.predict:main"

rloop-grammar-graph-prediction    = "rloopgrammar.graph_prediction:main"

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.urls]
Home = "https://github.com/Arsuaga-Vazquez-Lab/R-loopGrammar"


